# wsn-bapcod-opt

./: .gitignore  CMakeLists.txt  DEFAULT README.md  README.md  commands
Applications/: CMakeLists.txt
Applications/CMake/: PackageApplications.cmake
Bapcod/: CMakeLists.txt
Bapcod/CMake/: BapcodApplicationProject.cmake  BapcodPackage.cmake  BapcodProject.cmake  BapcodTest.cmake  Definition.cmake  Documentation.cmake  Doxyfile-html.cmake  Project.cmake  Solver.cmake
Bapcod/include/: bcAbstractControlParameters.hpp  bcApplicationException.hpp  bcBapcodUtilities.hpp  bcDoubleC.hpp  bcGlobalException.hpp  bcModelBranchingConstrC.hpp  bcModelColGenSpC.hpp  bcModelConstrC.hpp  bcModelCutConstrC.hpp  bcModelFormulationC.hpp  bcModelGlobalCustomSolvers.hpp  bcModelMasterC.hpp  bcModelNetworkFlow.hpp  bcModelNonPublicCuts.hpp  bcModelObjectiveC.hpp  bcModelParameterC.hpp  bcModelPointerC.hpp  bcModelRCSPSolver.hpp  bcModelSolutionC.hpp  bcModelVarC.hpp  bcModelingLanguageC.hpp  bcMultiIndexC.hpp  bcParameterC.hpp  bcParameterParserC.hpp  bcRandGen.hpp  bcTimeC.hpp  bcUsefulHeadFil.hpp  bcUserControlParameters.hpp
Bapcod/include_dev/: bcAlg4DivingHeuristic.hpp  bcAlg4EvalByColAndCutGen.hpp  bcAlg4EvalByLagrangianDuality.hpp  bcAlg4EvalByLp.hpp  bcAlg4EvalByMip.hpp  bcAlg4EvalBySimplexBasedColGen.hpp  bcAlg4EvalOfNode.hpp  bcAlg4GenChildrenInBranching.hpp  bcAlg4GenChildrenOfNode.hpp  bcAlg4Master.hpp  bcAlg4PreprocessingOfNode.hpp  bcAlg4PrimalHeurOfNode.hpp  bcAlg4ProblemSetup.hpp  bcBapcodInit.hpp  bcBapcodVersion.hpp  bcBapcodVersion.hpp.in  bcBoundLevC.hpp  bcCInterfaceModel.hpp  bcCoefAboundC.hpp  bcColGenSpConfC.hpp  bcControlParameters.hpp  bcDevControlParameters.hpp  bcErrorC.hpp  bcFormC.hpp  bcFracSolBasedHeuristic.hpp  bcGenBranchingConstrC.hpp  bcGenMastVarConstrC.hpp  bcGenVarConstrC.hpp  bcGlobalException.hpp  bcGreedyHeuristic.hpp  bcIndexC.hpp  bcInstanciatedVarConstrC.hpp  bcKnapsackSolverC.hpp  bcMastColumnC.hpp  bcMastVarConstrC.hpp  bcMasterCommons.hpp  bcMasterConfC.hpp  bcMasterConfData.hpp  bcModelC.hpp  bcModelVRPSolver.hpp  (+20 more)
Bapcod/include_solverInterfaces/: bcCbcSolverC.hpp  bcClpSolverC.hpp  bcCplexSolverC.hpp  bcGRBSolverC.hpp  bcGlpkSolverC.hpp  bcXpressMPSolverC.hpp  (+1 more)
Demos/: CMakeLists.txt
Demos/CMake/: BapcodAllApplicationPackage.cmake
Demos/CuttingStockDemo/: README
Demos/CuttingStockDemo/config/: bcParameters.cfg  dcspParameters.cfg
Demos/CuttingStockDemo/data/: inputList  inputList2
Demos/CuttingStockDemo/include/: dcspColGenSubproblem.hpp  dcspCutSeparationRoutines.hpp  dcspDataC.hpp  dcspModelC.hpp  dcspParameters.hpp
Demos/CuttingStockDemo/scripts/: scriptTestStageApproach.sh
Demos/CuttingStockDemo/src/: dcspColGenSubproblem.cpp  dcspCutSeparationRoutines.cpp  dcspDataC.cpp  dcspMain.cpp  dcspModelC.cpp  dcspParameters.cpp
Demos/CuttingStockDemo/tests/: runTests.sh
Demos/CuttingStockDemo/tests/nonRegressionTests/testBranchAndPrice/: outputSummaryStable  runTest.sh
Demos/CuttingStockDemo/tests/nonRegressionTests/testBranchAndPrice/config/: bcParameters.cfg
Demos/CuttingStockDemo/tests/nonRegressionTests/testColGenAutoSmoothing/: outputSummaryStable  runTest.sh
Demos/CuttingStockDemo/tests/nonRegressionTests/testColGenAutoSmoothing/config/: bcParameters.cfg
Demos/CuttingStockDemo/tests/nonRegressionTests/testColGenWithAutoSmoothing/: RUN_LIST  runTest.sh
Demos/CuttingStockDemo/tests/nonRegressionTests/testColGenWithAutoSmoothing/config/: bcParameters.cfg
Demos/GeneralizedAssignmentDemo/: CMakeLists.txt
Demos/GeneralizedAssignmentDemo/config/: bcParameters.cfg  bcParametersLP.cfg  dsgapParameters.cfg
Demos/GeneralizedAssignmentDemo/data/: inputList  smallgap1.txt  smallgap2.txt  smallgap4.txt  smallgap5.txt  smallgapcuts1.txt  smallgapcuts1_x13x9.txt  smallgapcuts2.txt  smallgapcuts3.txt  smallgapcuts5.txt
Demos/GeneralizedAssignmentDemo/include/: dsgapDataC.hpp  dsgapModelC.hpp  dsgapParameter.hpp
Demos/GeneralizedAssignmentDemo/src/: dsgapDataC.cpp  dsgapMain.cpp  dsgapModelC.cpp  dsgapParameter.cpp
Demos/GeneralizedAssignmentDemo/tests/: runTests.sh
Demos/GeneralizedAssignmentDemo/tests/data/: inputList
Demos/GeneralizedAssignmentDemo/tests/nonRegressionTests/testBranchAndPrice/: outputSummaryStable  runTest.sh
Demos/GeneralizedAssignmentDemo/tests/nonRegressionTests/testBranchAndPrice/config/: dsgapParameters.cfg
Demos/GeneralizedAssignmentDemo/tests/nonRegressionTests/testSolveMIP/: outputSummaryStable  runTest.sh
Demos/GeneralizedAssignmentDemo/tests/nonRegressionTests/testSolveMIP/config/: bcParameters.cfg  dsgapParameters.cfg
Demos/VehicleRoutingWithTimeWindowsDemo/: CMakeLists.txt
Demos/VehicleRoutingWithTimeWindowsDemo/config/: bc.cfg
Demos/VehicleRoutingWithTimeWindowsDemo/include/: Data.h  InputUser.h  Loader.h  Model.h  Parameters.h  RCSPSolver.h  Singleton.h  SolutionChecker.h
Demos/VehicleRoutingWithTimeWindowsDemo/src/: Loader.cpp  Main.cpp  Model.cpp  Parameters.cpp  RCSPSolver.cpp  SolutionChecker.cpp
Demos/VehicleRoutingWithTimeWindowsDemo/tests/: runTests.sh
Demos/VehicleRoutingWithTimeWindowsDemo/tests/testBCP/: outputSummaryStable  runTest.sh
Demos/VehicleRoutingWithTimeWindowsDemo/tests/testBCP/config/: app.cfg  bc.cfg
Demos/VertexColoringDemo/: CMakeLists.txt
Demos/VertexColoringDemo/config/: app.cfg  bcBranchAndPrice.cfg
Demos/VertexColoringDemo/data/: RandReg_N_50_D_4_s_0.col  mug88_25.col
Demos/VertexColoringDemo/include/: dvcpData.hpp  dvcpHeuristics.hpp  dvcpModel.hpp  dvcpParameters.hpp
Demos/VertexColoringDemo/locsearch/: CMakeLists.txt  locsearch.c  locsearch.h  ls_color_defs.h  ls_graph.c  ls_greedy.c  ls_greedy.h  ls_heap.c  ls_heap.h  ls_util.c
Demos/VertexColoringDemo/src/: dvcpData.cpp  dvcpHeuristics.cpp  dvcpMain.cpp  dvcpModel.cpp  dvcpParameters.cpp
Demos/VertexColoringDemo/tests/: runTests.sh  run_application_and_test_if_stable.sh
Demos/VertexColoringDemo/tests/testBAPwithRyanFosterAndDiving/: outputSummaryStable  runTest.sh
Documentation/: BapcodUserGuide0.77.tex
Tools/: CMakeLists.txt
vrpsolver-docker-v0.4.1a/: README.txt
(+208 files in other folders)
